WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105204
[BlackBerry] Null pointer access in compositorDrawsRootLayer
https://bugs.webkit.org/show_bug.cgi?id=105204
Summary
[BlackBerry] Null pointer access in compositorDrawsRootLayer
Yong Li
Reported
2012-12-17 12:52:38 PST
m_mainFrame can be null
Attachments
the patch
(1.27 KB, patch)
2012-12-17 13:12 PST
,
Yong Li
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yong Li
Comment 1
2012-12-17 13:12:37 PST
Created
attachment 179787
[details]
the patch
Rob Buis
Comment 2
2012-12-17 13:17:48 PST
Comment on
attachment 179787
[details]
the patch LGTM.
WebKit Review Bot
Comment 3
2012-12-17 13:36:01 PST
Comment on
attachment 179787
[details]
the patch Clearing flags on attachment: 179787 Committed
r137935
: <
http://trac.webkit.org/changeset/137935
>
WebKit Review Bot
Comment 4
2012-12-17 13:36:04 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug