[BlackBerry] Null pointer access in compositorDrawsRootLayer https://bugs.webkit.org/show_bug.cgi?id=105204

Reviewed by Rob Buis.

PR# 267188.
Add a null check for m_mainFrame in the function.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::compositorDrawsRootLayer):


Canonical link: https://commits.webkit.org/123447@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137935 268f45cc-cd09-0410-ab3c-d52691b4dbfc